--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "marketEase",
   "version": "1.0.0",
   "description": "MERN Ecommerce Server",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon index.js",
+    "build": "npm run build",
     "start": "cross-env NODE_ENV=production node index.js",
     "seed:db": "node utils/seed.js"
   },
